# PillageSuite

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: active_index_ldap.rs  active_index_shares.rs  gather_credz.rs  json_importer.rs  lib.rs  main.rs  saved_queries.rs  smb_auth.rs
src/components/: AboutView.vue  ActiveIndex.vue  AppLayout.vue  CredentialGathering.vue  CypherQueryEditor.vue  GraphVisualization.vue  JsonImport.vue  LiveSearch.vue  NavDropdown.vue  Neo4jConnection.vue  NodeContextMenu.vue  NodeDetails.vue  QueryResults.vue  SavedQueries.vue  StatsCharts.vue  StatsView.vue  TabbedSidebar.vue  ThemeToggle.vue  ToggleButton.vue  WarningDialog.vue
src/services/: graphVisualizationService.js  neo4jService.js
src/styles/: styles.css
