[package]
name = "pillagesuite"
version = "0.1.1"
description = "Pillage Suite"
authors = ["M.Rauch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pillagesuite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-opener = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
neo4rs = "0.7.1"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_NetworkManagement_NetManagement"
] }
once_cell = "1.17.1"  
chrono = "0.4"
ldap3 = {version = "0.11.5", features = ["gssapi"] }
futures = "0.3"
zip = "4.3.0"

